improved headers system